31/03/2022:
	- Modified TIFFOpen() mode parameter to activate on-demand strip/tile offset/bytecount array loading. This functionality
	  is available in libtiff 4.1.0 onwards and enables significantly faster loading of very large TIFF files


30/03/2022:
	- Modified configure.ac to separate SSE3 and AVX2 Kakadu support detection from version detection. Should fix
	  compilation problem on ARM (https://github.com/ruven/iipsrv/pull/38#issuecomment-1072874587)


21/01/2022:
	- Added fast scale_to_8bit() function to Transform class to allow 16 and 32 bit fixed point data to be efficiently
	  scaled down to 8 bit without use of the floating point image processing pipeline


19/01/2022:
	- Added missing minmax variable to View class to indicate a user-defined min/max. Forces use of the floating point
	  image processing pipeline in CVT.cc and JTL.cc


16/01/2022:
	- Modified TileManager.cc to verify that malloc() has correctly allocated memory.
	- Updated numerical types to std::size_t in RawTile.h, TileManager.cc, KakaduImage.cc, OpenJPEG.cc and Transforms.cc
	  when allocating memory via new to avoid integer overflow - fixes remaining problems identified in
	  https://github.com/ruven/iipsrv/issues/223.


15/01/2022:
	- Added verification that image has been set in SPECTRA.cc and check on the validity of the requested tile
	  resolution in JTL.cc. Fixes a couple of the crash conditions reported in https://github.com/ruven/iipsrv/issues/223


14/01/2022:
	- Detection of HTJ2K also added for KakaduImage.cc for logging purposes (DEBUG needs to be enabled at compile time)


07/01/2022:
	- Added detection of HTJ2K streams to OpenJPEG.cc for logging purposes (DEBUG needs to be enabled at compile time)


14/09/2021:
	- Fix to use C99 stdint types instead of deprecated libtiff types


13/09/2021:
	- Added extra error-checking to TIFFSetDirectory()


03/09/2021:
	- Handle the more stringent ICC profile checking introduced in libpng 1.6. Fix to prevent incorrect sRGB